alignments fixed

--- a/style.scss
+++ b/style.scss
@@ -240,9 +240,10 @@ img {
 }
 
 .site-description {
-  margin: -10px 0 0 0;
+  margin: -5px 0 0 0;
   color: $gray;
-  font-size: 17px;
+  font-size: 16px;
+  line-height: 200%;
 
   @include mobile {
     margin: 3px 0;
